Added TTA, metric on hold-out set and made a lot of fixes

--- a/configs/exp_train_01.yaml
+++ b/configs/exp_train_01.yaml
@@ -1,11 +1,19 @@
+INPUT_DIR: ../input/
+MODELS_DIR: ../models/
+SUBMISSIONS_DIR: ../submissions/
+
 ﻿batch_size: 10
-learning_rate: 3e-4
+learning_rate: 0.0003
 n_epochs: 10
 n_workers: 8
-eraly_stopping: 1
-folds: 5
+early_stopping_patience: 1
+
+
+n_folds: 5
 images_size: 512x512
 model_name: tf_efficientnet_b3_ns
 experiment_name: exp_train_01
 use_test_labels: false
 seed: 42
+device: cuda:0
+folds_train_file: train_folds_stratified
