--- a/configs/exp_train_01.yaml
+++ b/configs/exp_train_01.yaml
@@ -2,7 +2,7 @@ INPUT_DIR: ../input/
 MODELS_DIR: ../models/
 SUBMISSIONS_DIR: ../submissions/
 
-﻿batch_size: 10
+batch_size: 10
 learning_rate: 0.0003
 n_epochs: 10
 n_workers: 8
